{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 114,
  "lineage": "65bfb730-234d-ef7b-fe22-3f9187c94697",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "mlops_handson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:899611639351:loadbalancer/app/mlops-handson-alb/151a84c9aae11862",
            "arn_suffix": "app/mlops-handson-alb/151a84c9aae11862",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mlops-handson-alb-335006601.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:899611639351:loadbalancer/app/mlops-handson-alb/151a84c9aae11862",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mlops-handson-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0485dadb20f070c43"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08183d003beb557bb"
              },
              {
                "subnet_id": "subnet-088993811f76bfdcb"
              }
            ],
            "subnets": [
              "subnet-08183d003beb557bb",
              "subnet-088993811f76bfdcb"
            ],
            "vpc_id": "vpc-069312df1338a944f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public1a",
            "module.network.aws_subnet.public1c",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mlops_handson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:899611639351:listener/app/mlops-handson-alb/151a84c9aae11862/142aa580ea063b3d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:899611639351:targetgroup/mlops-handson-tg/2ac4b9fa10b00f7e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:899611639351:listener/app/mlops-handson-alb/151a84c9aae11862/142aa580ea063b3d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:899611639351:loadbalancer/app/mlops-handson-alb/151a84c9aae11862",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.mlops_handson",
            "module.alb.aws_lb_target_group.mlops_handson",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public1a",
            "module.network.aws_subnet.public1c",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mlops_handson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:899611639351:targetgroup/mlops-handson-tg/2ac4b9fa10b00f7e",
            "arn_suffix": "targetgroup/mlops-handson-tg/2ac4b9fa10b00f7e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:899611639351:targetgroup/mlops-handson-tg/2ac4b9fa10b00f7e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mlops-handson-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mlops_handson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:internet-gateway/igw-0bedae8328ca590be",
            "id": "igw-0bedae8328ca590be",
            "owner_id": "899611639351",
            "tags": {
              "Name": "mlops-handson-igw"
            },
            "tags_all": {
              "Name": "mlops-handson-igw"
            },
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:route-table/rtb-09ecc513b94c62719",
            "id": "rtb-09ecc513b94c62719",
            "owner_id": "899611639351",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "mlops-handson-private-route"
            },
            "tags_all": {
              "Name": "mlops-handson-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-069312df1338a944f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:route-table/rtb-0c643904ad2b16f00",
            "id": "rtb-0c643904ad2b16f00",
            "owner_id": "899611639351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bedae8328ca590be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mlops-handson-public-route"
            },
            "tags_all": {
              "Name": "mlops-handson-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-069312df1338a944f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.mlops_handson",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0ca8268a4f918d9",
            "route_table_id": "rtb-09ecc513b94c62719",
            "subnet_id": "subnet-0544ce603f79662b9"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private1a",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094671a674bb7f65e",
            "route_table_id": "rtb-09ecc513b94c62719",
            "subnet_id": "subnet-033aa8a1a5c90acab"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private1c",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a9f199468e9aa3d",
            "route_table_id": "rtb-0c643904ad2b16f00",
            "subnet_id": "subnet-088993811f76bfdcb"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.mlops_handson",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public1a",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfeb9d61798d606b",
            "route_table_id": "rtb-0c643904ad2b16f00",
            "subnet_id": "subnet-08183d003beb557bb"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.mlops_handson",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public1c",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:security-group/sg-0485dadb20f070c43",
            "description": "security group for mlops handson alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0485dadb20f070c43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mlops-handson-alb-sg",
            "name_prefix": "",
            "owner_id": "899611639351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-handson-alb-sg"
            },
            "tags_all": {
              "Name": "mlops-handson-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-069312df1338a944f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ml_pipeline",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:security-group/sg-029a7416cadd62179",
            "description": "security group for mlops handson ml pipeline",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-029a7416cadd62179",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mlops-handson-ml-pipeline-sg",
            "name_prefix": "",
            "owner_id": "899611639351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-handson-ml-pipeline-sg"
            },
            "tags_all": {
              "Name": "mlops-handson-ml-pipeline-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-069312df1338a944f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "predict_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:security-group/sg-0a8a787d8601f6f10",
            "description": "security group for mlops handson predict api",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0485dadb20f070c43"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0a8a787d8601f6f10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0485dadb20f070c43"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mlops-handson-predict-api-sg",
            "name_prefix": "",
            "owner_id": "899611639351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlops-handson-predict-api-sg"
            },
            "tags_all": {
              "Name": "mlops-handson-predict-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-069312df1338a944f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:subnet/subnet-0544ce603f79662b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0544ce603f79662b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899611639351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-handson-private-subnet-1a"
            },
            "tags_all": {
              "Name": "mlops-handson-private-subnet-1a"
            },
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:subnet/subnet-033aa8a1a5c90acab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033aa8a1a5c90acab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899611639351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-handson-private-subnet-1c"
            },
            "tags_all": {
              "Name": "mlops-handson-private-subnet-1c"
            },
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:subnet/subnet-088993811f76bfdcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088993811f76bfdcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899611639351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-handson-public-subnet-1a"
            },
            "tags_all": {
              "Name": "mlops-handson-public-subnet-1a"
            },
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:subnet/subnet-08183d003beb557bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08183d003beb557bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899611639351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mlops-handson-public-subnet-1c"
            },
            "tags_all": {
              "Name": "mlops-handson-public-subnet-1c"
            },
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mlops_handson",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:vpc/vpc-069312df1338a944f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2f2274cfe0790f4",
            "default_route_table_id": "rtb-0aeebeba11c6aaac9",
            "default_security_group_id": "sg-030762b7565ef71a8",
            "dhcp_options_id": "dopt-0324d913a6fa28b0b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069312df1338a944f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aeebeba11c6aaac9",
            "owner_id": "899611639351",
            "tags": {
              "Name": "mlops-handson"
            },
            "tags_all": {
              "Name": "mlops-handson"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:vpc-endpoint/vpce-031c4d936536cd77b",
            "dns_entry": [
              {
                "dns_name": "vpce-031c4d936536cd77b-s4qgxwlf.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-031c4d936536cd77b-s4qgxwlf-ap-northeast-1a.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-031c4d936536cd77b-s4qgxwlf-ap-northeast-1c.api.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "api.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z08194593IH2KCG3QZ8E9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-031c4d936536cd77b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08ea79beb4d111537",
              "eni-0c37926a786a3a86f"
            ],
            "owner_id": "899611639351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-029a7416cadd62179",
              "sg-0a8a787d8601f6f10"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-033aa8a1a5c90acab",
              "subnet-0544ce603f79662b9"
            ],
            "tags": {
              "Name": "mlops-handson-ecr-api-vpe"
            },
            "tags_all": {
              "Name": "mlops-handson-ecr-api-vpe"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ml_pipeline",
            "module.network.aws_security_group.predict_api",
            "module.network.aws_subnet.private1a",
            "module.network.aws_subnet.private1c",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr-dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:vpc-endpoint/vpce-0e85f473655adcf0e",
            "dns_entry": [
              {
                "dns_name": "vpce-0e85f473655adcf0e-s5gwd3kq.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0e85f473655adcf0e-s5gwd3kq-ap-northeast-1a.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0e85f473655adcf0e-s5gwd3kq-ap-northeast-1c.dkr.ecr.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z07071613FIK8OO8H8AT0"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z07071613FIK8OO8H8AT0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0e85f473655adcf0e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01d688415ffe1f1fc",
              "eni-03b4efc53a1124189"
            ],
            "owner_id": "899611639351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-029a7416cadd62179",
              "sg-0a8a787d8601f6f10"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-033aa8a1a5c90acab",
              "subnet-0544ce603f79662b9"
            ],
            "tags": {
              "Name": "mlops-handson-ecr-dkr-vpe"
            },
            "tags_all": {
              "Name": "mlops-handson-ecr-dkr-vpe"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ml_pipeline",
            "module.network.aws_security_group.predict_api",
            "module.network.aws_subnet.private1a",
            "module.network.aws_subnet.private1c",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:vpc-endpoint/vpce-0018996bc75402ab7",
            "dns_entry": [
              {
                "dns_name": "vpce-0018996bc75402ab7-fyko70zp.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0018996bc75402ab7-fyko70zp-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0018996bc75402ab7-fyko70zp-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "logs.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z08245541MQ2RROPO5LEE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0018996bc75402ab7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-071434becf138cd5c",
              "eni-0d7bc41b6829c3147"
            ],
            "owner_id": "899611639351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-029a7416cadd62179",
              "sg-0a8a787d8601f6f10"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-033aa8a1a5c90acab",
              "subnet-0544ce603f79662b9"
            ],
            "tags": {
              "Name": "mlops-handson-logs-vpe"
            },
            "tags_all": {
              "Name": "mlops-handson-logs-vpe"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ml_pipeline",
            "module.network.aws_security_group.predict_api",
            "module.network.aws_subnet.private1a",
            "module.network.aws_subnet.private1c",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:vpc-endpoint/vpce-0788db395703ac1a7",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.0.0/20",
              "52.219.162.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-0788db395703ac1a7",
            "owner_id": "899611639351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09ecc513b94c62719"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "mlops-handson-s3-vpe"
            },
            "tags_all": {
              "Name": "mlops-handson-s3-vpe"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:vpc-endpoint/vpce-04dc6fdd0387d1251",
            "dns_entry": [
              {
                "dns_name": "vpce-04dc6fdd0387d1251-n2bggicw.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-04dc6fdd0387d1251-n2bggicw-ap-northeast-1a.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-04dc6fdd0387d1251-n2bggicw-ap-northeast-1c.secretsmanager.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "secretsmanager.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z07063202PFEPN41I85A2"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-04dc6fdd0387d1251",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0553561830f7d7431",
              "eni-0a38776c22395b23e"
            ],
            "owner_id": "899611639351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-029a7416cadd62179",
              "sg-0a8a787d8601f6f10"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.secretsmanager",
            "state": "available",
            "subnet_ids": [
              "subnet-033aa8a1a5c90acab",
              "subnet-0544ce603f79662b9"
            ],
            "tags": {
              "Name": "mlops-handson-secretsmanager-vpe"
            },
            "tags_all": {
              "Name": "mlops-handson-secretsmanager-vpe"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ml_pipeline",
            "module.network.aws_security_group.predict_api",
            "module.network.aws_subnet.private1a",
            "module.network.aws_subnet.private1c",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:899611639351:vpc-endpoint/vpce-022df2c7cfba1e19a",
            "dns_entry": [
              {
                "dns_name": "vpce-022df2c7cfba1e19a-ocsbk29d.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-022df2c7cfba1e19a-ocsbk29d-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-022df2c7cfba1e19a-ocsbk29d-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z07065411GAXKLH4XGBV5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-022df2c7cfba1e19a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-021daa7e61fc5ee55",
              "eni-02848c4ec19a40b9c"
            ],
            "owner_id": "899611639351",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-029a7416cadd62179",
              "sg-0a8a787d8601f6f10"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-033aa8a1a5c90acab",
              "subnet-0544ce603f79662b9"
            ],
            "tags": {
              "Name": "mlops-handson-ssm-vpe"
            },
            "tags_all": {
              "Name": "mlops-handson-ssm-vpe"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-069312df1338a944f"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ml_pipeline",
            "module.network.aws_security_group.predict_api",
            "module.network.aws_subnet.private1a",
            "module.network.aws_subnet.private1c",
            "module.network.aws_vpc.mlops_handson"
          ]
        }
      ]
    }
  ]
}